<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz_ogre_next_vendor</name>
  <!--
    Note on package versioning:
    This version only represents the version of the vendor package, not the
    version of the underlying/vendored package (See <description> for that).
    To avoid any confusion with the version of the vendor package, the major
    version here will always be 0.
  -->
  <version>0.0.5</version>
  <description>
    Vendor package for Ogre-next v2.3.3
  </description>

  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <maintainer email="addisuzt@intrinsic.ai">Addisu Z. Taddese</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- ogre is MIT (https://www.ogre3d.org/licensing) -->

  <url type="website">https://www.ogre3d.org/</url>

  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <depend>glslang-dev</depend>
  <depend>glslc</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>libfreeimage-dev</depend>
  <depend>libfreetype-dev</depend>
  <depend>libpoco-dev</depend>
  <depend>libshaderc-dev</depend>
  <depend>libvulkan-dev</depend>
  <depend>libx11-dev</depend>
  <depend>libx11-xcb-dev</depend>
  <depend>libxaw</depend>
  <depend>libxcb-randr0-dev</depend>
  <depend>libxrandr</depend>
  <depend>opengl</depend>
  <depend>rapidjson-dev</depend>
  <depend>sdl2</depend>
  <depend>tbb</depend>
  <depend>tinyxml2</depend>
  <depend>zziplib</depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
